# cintent-051

./: README.md  meson.build  pyproject.toml
.github/workflows/: modified.yaml
docs/: installation.rst
examples/filters/reference/: apply_chords.ipynb  apply_chords_3D.ipynb  apply_padded.ipynb  chunked_func.ipynb  distance_transform_lin.ipynb  fftmorphology.ipynb  fill_closed_pores.ipynb  find_disconnected_voxels.ipynb  find_dt_artifacts.ipynb  find_peaks.ipynb  find_trapped_clusters.ipynb  flood.ipynb  flood_func.ipynb  hold_peaks.ipynb  local_thickness.ipynb  nl_means_layered.ipynb  nphase_border.ipynb  pc_to_satn.ipynb  porosimetry.ipynb  prune_branches.ipynb  reduce_peaks.ipynb  region_size.ipynb  satn_to_seq.ipynb  seq_to_satn.ipynb  size_to_satn.ipynb  size_to_seq.ipynb  snow_partitioning.ipynb  snow_partitioning_n.ipynb  snow_partitioning_parallel.ipynb  trim_disconnected_voxels.ipynb  trim_extrema.ipynb  trim_floating_solid.ipynb  trim_nearby_peaks.ipynb  trim_nonpercolating_paths.ipynb  trim_saddle_points.ipynb  trim_small_clusters.ipynb
examples/filters/tutorials/: adding_chords.ipynb  finding_and_filling_pores.ipynb  local_thickness.ipynb  snow_partitioning.ipynb  snow_partitioning_parallel.ipynb
examples/general/: denoising_and_segmenting_images.ipynb  getting_started.ipynb  loading_images.ipynb
examples/generators/reference/: blobs.ipynb  borders.ipynb  bundle_of_tubes.ipynb  cylinders.ipynb  cylindrical_pillars_array.ipynb  cylindrical_pillars_mesh.ipynb  cylindrical_plug.ipynb  faces.ipynb  fractal_noise.ipynb  insert_shape.ipynb  lattice_spheres.ipynb  line_segment.ipynb  overlapping_spheres.ipynb  polydisperse_spheres.ipynb  pseudo_electrostatic_packing.ipynb  pseudo_gravity_packing.ipynb  ramp.ipynb  random_cantor_dust.ipynb  random_spheres.ipynb  rectangular_pillars_array.ipynb  sierpinski_foam.ipynb  spheres_from_coords.ipynb  voronoi_edges.ipynb
examples/generators/tutorials/: creating_multiscale_images_2.ipynb  cylinders.ipynb  generate_spheres_packings.ipynb  making_blobs.ipynb
examples/metrics/reference/: bond_number.ipynb  boxcount.ipynb  chord_counts.ipynb  chord_length_distribution.ipynb  find_h.ipynb  find_porosity_threshold.ipynb  is_percolating.ipynb  lineal_path_distribution.ipynb  mesh__volume.ipynb  mesh_surface_area.ipynb  pc_map_to_pc_curve.ipynb  percolating_porosity.ipynb  phase_fraction.ipynb  pore_size_distribution.ipynb  porosity.ipynb  porosity_profile.ipynb  props_to_DataFrame.ipynb  props_to_image.ipynb  radial_density_distribution.ipynb  region_interface_areas.ipynb  region_surface_areas.ipynb  region_volumes.ipynb  regionprops_3D.ipynb  rev_porosity.ipynb  rev_tortuosity.ipynb  satn_profile.ipynb  two_point_correlation.ipynb
examples/metrics/tutorials/: computing_fractal_dim.ipynb  lineal_path_function.ipynb  porosity_profiles.ipynb  regionprops_3d.ipynb
examples/networks/reference/: add_boundary_regions.ipynb  diffusive_size_factor_AI.ipynb  diffusive_size_factor_DNS.ipynb  label_boundaries.ipynb  label_phases.ipynb  magnet.ipynb  map_to_regions.ipynb  regions_to_network.ipynb  snow2.ipynb
examples/networks/tutorials/: adding_boundary_pores.ipynb  magnet.ipynb  predicting_diffusive_size_factors_rock_sample.ipynb  snow_advanced.ipynb  snow_basic.ipynb  using_diffusive_size_factor_AI_with_snow.ipynb
examples/simulations/reference/: drainage.ipynb  imbibition.ipynb  injection.ipynb
examples/simulations/tutorials/: drainage_with_gravity_advanced.ipynb  drainage_with_gravity_basic.ipynb  finding_tortuosity_from_image.ipynb  overview_of_two_phase_flow_part1.ipynb  overview_of_two_phase_flow_part2.ipynb  overview_of_two_phase_flow_part3.ipynb  using_injection.ipynb  using_rev_tortuosity.ipynb
examples/tools/reference/: all_to_uniform.ipynb  bbox_to_slices.ipynb  get_slices_grid.ipynb  insert_cylinder.ipynb  make_contiguous.ipynb  unpad.ipynb
examples/visualization/reference/: bar.ipynb  prep_for_imshow.ipynb  satn_to_panels.ipynb  show_3D.ipynb  show_mesh.ipynb  show_panels.ipynb  xray.ipynb
examples/visualization/tutorials/: visualizing_tif_in_paraveiw.ipynb
src/porespy/: __init__.py  __version__.py
src/porespy/beta/: __init__.py  _walker.py  meson.build  walker.c  walker.h
src/porespy/filters/: _displacement.py  _fill_and_find.py  _funcs.py  _lt_methods.py  _morphology.py  _size_seq_satn.py  _snows.py  _transforms.py
src/porespy/generators/: _fractals.py  _imgen.py  _micromodels.py  _noise.py  _pseudo_packings.py  _spheres_from_coords.py
src/porespy/metrics/: _funcs.py  _meshtools.py  _rev.py
src/porespy/networks/: _getnet_orig.py  _magnet.py
src/porespy/simulations/: _dns.py  _drainage.py  _hg_porosimetry.py  _ibip_gpu.py  _imbibition.py  _injection.py
src/porespy/tools/: _funcs.py  _morphology.py  _utils.py
src/porespy/visualization/: _funcs.py
test/fixtures/: .test_durations_examples  .test_durations_unit
test/integration/: test_drainage.py
test/unit/: test_beta.py  test_displacement_refs.py  test_filters.py  test_filters_size_seq_satn.py  test_generators.py  test_magnet.py  test_metrics.py  test_simulations_block_and_tackle.py  test_simulations_ibop.py  test_tools.py
