[project]
name = "porespy"
dynamic = ["version"]
description = "A set of tools for analyzing 3D images of porous materials"
authors = [{ name = "PoreSpy Team", email = "jgostick@gmail.com" }]
maintainers = [
    { name = "Jeff Gostick", email = "jgostick@gmail.com" },
    { name = "Amin Sadeghi", email = "amin.sadeghi@live.com" },
]
license = "MIT"
keywords = [
    "voxel images",
    "porous materials",
    "image analysis",
    "direct numerical simulation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "dask",
    "deprecated",
    "edt",
    "matplotlib",
    "numba",
    "numpy<2.0",
    "pandas",
    "psutil",
    "rich",
    "scikit-image<0.25.0",
    "scipy",
    "tqdm",
    "setuptools",
    "trimesh>=4.5.3",
    "pyevtk>=1.6.0",
    "matplotlib-inline>=0.1.7",
    "numpy-stl>=3.2.0",
    "imageio>=2.37.0",
    "nanomesh>=0.9.1",
    "pywavelets>=1.8.0",
    "matplotlib-inline",
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

[project.optional-dependencies]
extras = [
    "scikit-learn",
    "openpnm",
]
build = [
    "hatch",
    "meson",
    "cibuildwheel",
    "build",
    "ninja",
    "pip",
]
test = [
    "codecov",
    "coverage",
    "nbval",
    "pytest",
    "pytest-cache",
    "pytest-cov",
    "pytest-custom-exit-code",
    "pytest-split",
]
docs = [
    "mock",
    "myst-nb",
    "nbstripout>=0.8.1",
    "pandoc",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-design",
    "tensorflow",
]
interactive = [
    "ipython",
    "ipykernel",
    "ipywidgets",
    "jupyter",
    "jupyterlab_widgets",
]

[project.urls]
Homepage = "https://porespy.org"
Repository = "https://github.com/PMEAL/porespy"
"Bug Tracker" = "https://github.com/PMEAL/porespy/issues"
Documentation = "https://porespy.org"

[build-system]
requires = ["hatchling", "meson", "ninja"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
include = [
    "src/porespy/beta/libwalker.so",
    "src/porespy/beta/libwalker.dll",
    "src/porespy/beta/libwalker.dylib",
]

[tool.hatch.version]
path = "src/porespy/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/porespy"]
artifacts = [
    "src/porespy/beta/*.so",
    "src/porespy/beta/*.dll",
    "src/porespy/beta/*.dylib",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--assert=plain",
    "-ra -v",
    "--ignore=docs/conf.py",
    "--ignore=examples/generators/reference/fractal_noise.ipynb",
    "--ignore=examples/networks/reference/diffusive_size_factor_AI.ipynb",
    "--ignore=examples/networks/tutorials/predicting_diffusive_size_factors_rock_sample.ipynb",
    "--ignore=examples/networks/tutorials/using_diffusive_size_factor_AI_with_snow.ipynb",
]
python_files = "*.py"
python_classes = "*Test"
python_functions = "test_*"
testpaths = ["test", "examples"]
norecursedirs = [".git", ".github", ".ipynb_checkpoints", "build", "dist"]

[tool.coverage.run]
source = ["src/porespy"]
[tool.coverage.report]
omit = [
    "docs/**",
    "test/**",
    "examples/**",
    "src/porespy/__version__.py",
    "src/porespy/beta/**",
    "**/__init__.py",
    "example.py",
    "setup.py",
]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 96
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "W", "E2"]
extend-select = ["I"]
ignore = ["E731", "F841", "E226", "I001"]
preview = true

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "I001"]
"_gdd.py" = ["ALL"]
"test/**" = ["F841"]
"test_snow2.py" = ["E241"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
